# beaglepod

./: BeaglePod.md  ProjectHome.md  configure.in  iTunes_Music_Library_2.xml
src/: aap.cpp  ipod.cpp  itunes.cpp  itunes.h  main.cpp
templates/: h
test/: Makefile.am  itunes.cpp  plist.cpp  testaap.cpp  testitunes.cpp  testplayer.cpp  testplist.cpp
trunk/: Doxyfile  Makefile.in  configure
trunk/src/: Makefile.am  Makefile.in  aap.h  ipod.h  player.cpp  player.h  plist.cpp  plist.h  protocol.h
trunk/test/: Makefile.in  aap.cpp
wiki/: BeaglePod.wiki
